adjusting delpoyment name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Photo-Port",
-  "homepage": "http://BeKind-Rewind.github.io/photo-port",
+  "name": "Oh Snap!",
+  "homepage": "http://BeKind-Rewind.github.io/oh-snap",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
